syntax = "proto3";
package kanthor.dataplane.v1;
option go_package = "github.com/scrapnode/kanthor/dataplane/server/grpc/protos";

service Message {
  rpc Create(MessageCreateReq) returns (MessageCreateRes) {}
}

message MessageCreateReq {
  string app_id = 1;
  string type = 2;
  string body = 3;
}

message MessageCreateRes {
  string id = 1;
  string bucket = 2;
  int64 timestamp = 3;
}